Fix last nav menu item wrapping on FF/IE

--- a/web/app/themes/tgp-theme/assets/styles/layouts/_header.scss
+++ b/web/app/themes/tgp-theme/assets/styles/layouts/_header.scss
@@ -89,6 +89,7 @@
         display: table;
         width: 100%;
         position: relative;
+        white-space: nowrap;
     }
 
     #menu-main-menu > .menu-item {
